# photo-album-extractor

./: .gitignore  CLAUDE.md  README.md  bounding_box.py  detection_strategies.py  geometry.py  image_processor.py  main.py  photo_extractor.py  photo_types.py  pyproject.toml  pytest.ini  quad_bounding_box.py  refine_bounds.py  requirements.txt  rotated_bounding_box.py
cli/: __init__.py  detect.py  extract.py  info.py  interpolate_dates.py  refine.py  utils.py
core/: bounding_box.py  bounding_box_data.py  bounding_box_storage.py  date_inference.py  date_utils.py  debug_plots.py  detection_strategies.py  errors.py  extract.py  geometry.py  images.py  photo_types.py  refine_strips.py  refine_strips_hough.py  refinement_strategies.py  settings.py  utils.py  validation_manager.py  validation_utils.py
evals/: test_refinement_on_real_scans.py
gui/: attributes_sidebar.py  batch_preprocess.py  directory_sidebar.py  extract_dialog.py  image_view.py  magnifier_widget.py  main_window.py  quad_bounding_box.py  settings_dialog.py
image_processing/: detection_strategies.py  geometry.py  image_processor.py  inscribed_rectangle.py  inscribed_rectangle_math_details.md  refine_bounds.py
photo_detection/: detection_strategies.py  inscribed_rectangle.py  refine_bounds.py  refine_strips.py  refinement_strategies.py
plans/: codebase_review.md  configuration_centralization.md  logging_standardization.md  mvp_architecture_refactor.md  mvp_magnifier_refactor.md  mvp_refactor_implementation_guide.md  refine_hough_cleanup.md  strategy_registry_cleanup.md  types.md
storage/: bounding_box_storage.py
tests/: README.md  create_test_data.py  test_bounding_box_storage.py  test_date_utils.py  test_image_extraction.py  test_inscribed_rectangle.py  test_main_window.py  test_refinement_on_real_scans.py  test_refinement_synthetic.py  test_workflow.py
